# fluxid

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  POLISH_AUDIT.md  README.md  SECURITY.md  SESSION_LOG.md  fluidmonitor-rs-overnight.md
crates/fluid-core/src/: settings.rs
crates/fluid-sensor/: Cargo.toml
crates/fluid-sensor/src/: lib.rs  pawnio.rs
crates/fluid-setup/src/: main.rs  style.rs
crates/fluid-widget/: Cargo.toml  build.rs
crates/fluid-widget/src/: fmt.rs  fonts.rs  main.rs  popups.rs  settings_panel.rs  style.rs  tile.rs  updates.rs
crates/flux-core/: Cargo.toml
crates/flux-core/src/: lib.rs  sensor_data.rs  settings.rs
crates/flux-ipc/: Cargo.toml
crates/flux-ipc/src/: lib.rs
crates/flux-remote/: Cargo.toml
crates/flux-remote/src/: client.rs  identity.rs  lib.rs  protocol.rs  server.rs  tls.rs
crates/flux-remote/tests/: loopback.rs
crates/flux-sensor/: Cargo.toml
crates/flux-sensor/resources/pawnio/: THIRD-PARTY-LICENSES.md
crates/flux-sensor/src/: d3dkmt.rs  igcl.rs  lib.rs  pawnio.rs
crates/flux-service/: Cargo.toml
crates/flux-service/src/: main.rs
crates/flux-setup/: Cargo.toml  build.rs
crates/flux-setup/src/: engine.rs  main.rs  payload.rs  style.rs
crates/flux-widget/: Cargo.toml  build.rs
crates/flux-widget/src/: cpu_driver.rs  firewall.rs  fmt.rs  fonts.rs  hotkeys.rs  main.rs  popups.rs  settings_panel.rs  style.rs  tile.rs  updates.rs
crates/flux-widget/themes/: amnesia.json  baldurs-gate-3.json  borderlands.json  crash-bandicoot.json  cyberpunk-2077.json  dayz.json  doom.json  fallout.json  hades.json  helldivers.json  hollow-knight.json  league-of-legends.json  mass-effect.json  minecraft.json  no-mans-sky.json  persona-5.json  runescape.json  spore.json  spyro.json  stardew-valley.json  stronghold-2.json  valheim.json  witcher.json  world-of-tanks.json  wow.json
docs/: INSTALLER.md  RELEASE_TEMPLATE.md
scripts/: Build-Setup.ps1  Scan-VirusTotal.ps1  banner.ps1  generate_fluxid_icons.py  make_icon_transparent.py
