[workspace]
resolver = "2"
members = [
    "crates/fluid-core",
    "crates/fluid-sensor",
    "crates/fluid-ipc",
    "crates/fluid-remote",
    "crates/fluid-widget",
    "crates/fluid-service",
    "crates/fluid-setup",
]

[workspace.package]
version = "1.0.3"
edition = "2021"
authors = ["Matt Hakes"]
license = "LicenseRef-PersonalUse"
repository = "https://github.com/DruidFluids/fluxid"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
iced = { version = "0.13", features = ["tokio", "svg", "canvas"] }
sysinfo = "0.34"
directories = "6"
notify = "7"
interprocess = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
