[package]
name = "fluid-widget"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fluidmonitor"
path = "src/main.rs"

[dependencies]
fluid-core = { path = "../fluid-core" }
fluid-ipc = { path = "../fluid-ipc" }
fluid-remote = { path = "../fluid-remote" }
iced = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fluid-sensor = { version = "2.0.0", path = "../fluid-sensor" }
reqwest = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tray-icon = "0.24.1"
chrono = "0.4.45"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_Graphics_DirectWrite", "Win32_UI_HiDpi", "Win32_Graphics_Gdi", "Win32_System_Threading"] }
winreg = "0.56.0"
