[package]
name = "flux-setup"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flux-setup"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
iced = { workspace = true }
tokio = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
