[package]
name = "flux-widget"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
flux-core = { path = "../flux-core" }
flux-ipc = { path = "../flux-ipc" }
flux-remote = { path = "../flux-remote" }
iced = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flux-sensor = { version = "1.0.0", path = "../flux-sensor" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tray-icon = "0.24.1"
chrono = "0.4.45"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_Graphics_DirectWrite", "Win32_Graphics_Dwm", "Win32_UI_HiDpi", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Security_WinTrust", "Win32_Security_Cryptography", "Win32_System_Registry"] }
winreg = "0.56.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
